Add swagger docs for handlers
