# internal/controller/http/v1/secret_notes.go
@@ -9,6 +9,18 @@ import (
 	"github.com/google/uuid"
 )
 
+// @Summary     Get user notes
+// @Description fetching user notes
+// @ID          notes_cards
+// @Tags  	    Notes
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Accept      json
+// @Produce     json
+// @Success     200 {object} []entity.SecretNote
+// @Success     204 {object} response
+// @Failure     401 {object} response
+// @Failure     500 {object} response
+// @Router      /user/notes [get].
 func (r *GophKeeperRoutes) GetNotes(ctx *gin.Context) {
 	currentUser, err := r.getUserFromCtx(ctx)
 	if err != nil {
@@ -29,6 +41,19 @@ func (r *GophKeeperRoutes) GetNotes(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, userNotes)
 }
 
+// @Summary     Add user note
+// @Description new user note
+// @ID          add_note
+// @Tags  	    Notes
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Accept      json
+// @Produce     json
+// @Param       request body entity.SecretNote true "note for save"
+// @Success     201 {object} entity.SecretNote
+// @Failure     400 {object} response
+// @Failure     401 {object} response
+// @Failure     500 {object} response
+// @Router      /user/notes [post].
 func (r *GophKeeperRoutes) AddNote(ctx *gin.Context) {
 	currentUser, err := r.getUserFromCtx(ctx)
 	if err != nil {
@@ -52,6 +77,17 @@ func (r *GophKeeperRoutes) AddNote(ctx *gin.Context) {
 	ctx.JSON(http.StatusAccepted, payloadNote)
 }
 
+// @Summary     Delete user note
+// @Description del user note
+// @ID          del_note
+// @Tags  	    Notes
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param       id   path string  true  "Note ID"
+// @Success     201
+// @Failure     400 {object} response
+// @Failure     401 {object} response
+// @Failure     500 {object} response
+// @Router      /user/notes/{id} [delete].
 func (r *GophKeeperRoutes) DelNote(ctx *gin.Context) {
 	noteUUID, err := uuid.Parse(ctx.Param("id"))
 	if err != nil {
@@ -74,6 +110,20 @@ func (r *GophKeeperRoutes) DelNote(ctx *gin.Context) {
 	ctx.Status(http.StatusAccepted)
 }
 
+// @Summary     Update user note
+// @Description update user note
+// @ID          update_note
+// @Tags  	    Notes
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Accept      json
+// @Produce     json
+// @Param       id   path string  true  "Note ID"
+// @Param       request body entity.SecretNote true "card for update"
+// @Success     202
+// @Failure     400 {object} response
+// @Failure     401 {object} response
+// @Failure     500 {object} response
+// @Router      /user/notes/{id} [patch].
 func (r *GophKeeperRoutes) UpdateNote(ctx *gin.Context) {
 	noteUUID, err := uuid.Parse(ctx.Param("id"))
 	if err != nil {
