# internal/usecase/server/repo/models/secret_note.go
@@ -5,7 +5,7 @@ import (
 	"gorm.io/gorm"
 )
 
-type SecretNote struct {
+type Note struct {
 	gorm.Model
 	ID     uuid.UUID `gorm:"type:uuid;default:uuid_generate_v4();primary_key"`
 	Name   string    `gorm:"size:100"`
